--- a/css/main.css
+++ b/css/main.css
@@ -6,24 +6,31 @@
 body{
     
     padding: 10px;
-    background-color: rgb(56, 49, 59);
+    background-color: whitesmoke;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 
-.menu{
-    margin: 10px;
-    display:  flex;
 
+ul {
+    width: 100%;
 }
-.menu li{
-    display: inline-flex;
-    list-style: none;
-    margin: 20px 40px;
+
+a.menu {
+    display: inline-block;
+    width: 25%;
+    padding: 15px 30px 15px 30px;
+    color: black;
+    text-decoration: none;
+    text-align: center;
+    -webkit-transition: all 1s ease;
+    transition: all 1s ease;
+    
+
   
 }
 .menu img{
-    margin-left: 15px;
+    margin-left: 2px    ;
 }
 header{
     display: inline-flexbox;
@@ -41,7 +48,7 @@ header h2, h1{
     position: relative;
     display: inline-flexbox;
     box-sizing: border-box;
-    width: 90%;
+    width: 100%;
 
     
 }
@@ -51,6 +58,7 @@ header h2>div{
     right: 0;
     bottom: -75px;
 }
+
 header img{
     width: 35%;
 
@@ -70,6 +78,7 @@ header img{
     border: 10px solid black;
     
 }
+    
 footer div{
     position: flex;
     width: 100vw;
@@ -148,3 +157,32 @@ footer span{
     min-width: 300px;
     overflow: auto;
 }
+
+.video {
+    display: block;
+}
+
+@media (max-width: 800px){
+    header{
+        font-size: 12px;
+        line-height: 38px;
+        height: 105px;
+    }
+    a.menu {
+        width: 50%;
+        font-size: 16px;
+    }
+}
+
+@media (max-width: 500px){
+    header{
+        font-size: 8px;
+        line-height: 26px;
+        height: 70px;
+    }
+    a.menu {
+        width: 100%;
+        font-size: 15px;
+    }
+}
+
